<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/textEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textempresa"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textendereco" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textComplemento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/textcomplemento" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textemail"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textTelefone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/texttelefone"
        android:textStyle="bold" />

</LinearLayout>