<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="auto"
    tools:context=".activity.CadastroAnunciante">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        android:importantForAutofill="auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/iconewhatsapp" />

    <EditText
        android:id="@+id/textTelefone2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/campoTelefone"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/whatsappTelefone2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/whatsappTelefone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cadastroanunciante"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textAnunciante"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/campoAnunciante"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/textNumero"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/campoNumero"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textEndereco"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/textEndereco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/campoEndereco"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textNumero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescricao" />

    <EditText
        android:id="@+id/textDescricao"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/campoDescricao"
        android:inputType="textMultiLine"
        android:maxLength="255"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAnunciante" />

    <EditText
        android:id="@+id/textBairro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/campoBairro"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textCep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEndereco" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cadastroContato"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBairro" />

    <EditText
        android:id="@+id/textTelefone1"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/campoTelefone"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/textCep"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/campoCep"
        android:inputType="textPostalAddress"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textBairro"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/whatsappTelefone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/textTelefone1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toEndOf="@+id/whatsappTelefone1"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/iconewhatsapp" />

    <EditText
        android:id="@+id/textWebsite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/campoWebsite"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"/>

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/campoEmail"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTelefone1" />

    <EditText
        android:id="@+id/textInstagram"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/campoInstagram"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textFacebook" />

    <EditText
        android:id="@+id/textFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/campoFacebook"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textWebsite" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/imagem_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textFacebook"
        app:srcCompat="@drawable/iconefacebook" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/imagem_instagram"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInstagram"
        app:srcCompat="@drawable/iconeinstagram" />

</androidx.constraintlayout.widget.ConstraintLayout>